# canary

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
app/: CMakeLists.txt  grid_helper.h  helper.h
app/barrier/: CMakeLists.txt  barrier.cc
app/cuda_logistic_loop/: CMakeLists.txt  cuda_helper.cu  cuda_helper.h  cuda_logistic_loop.cc
app/cuda_sumup/: CMakeLists.txt  cuda_helper.cu  cuda_helper.h  cuda_sumup.cc
app/kmean_loop/: CMakeLists.txt  kmean_loop.cc
app/lassen/: CMakeLists.txt  canary-lassen.cc  input.cc  input.h  lassen-util.cc  lassen-util.h  lassen.cc  lassen.h  simulation-mpi.cc  simulation-mpi.h  simulation-parallel.cc  simulation-parallel.h  simulation.cc  simulation.h  source.cc  source.h
app/logistic_loop/: CMakeLists.txt  logistic_loop.cc
app/logistic_while/: CMakeLists.txt  logistic_while.cc
app/pagerank/: CMakeLists.txt  pagerank.cc
app/parsec/: CMakeLists.txt  README  cellpool.cc  cellpool.h  f.cc  fluid.h  parsec-canary.cc
app/shuffle/: CMakeLists.txt  shuffle.cc
app/stencil/: CMakeLists.txt  stencil.cc
app/sumup/: CMakeLists.txt  sumup.cc
apps/parsec/: CMakeLists.txt
cmake/: build_dependency_library.cmake  default_flags.cmake  internal_utils.cmake
include/: CMakeLists.txt
include/canary/: api.cc  canary.h  canary_application.h  canary_internal.h  canary_task_context.h
scripts/: launch_workers.py  process_log.py
src/: CMakeLists.txt
src/controller/: canary_controller.cc  controller_communication_interface.h  controller_communication_manager.cc  controller_communication_manager.h  controller_scheduler.cc  controller_scheduler.h  launch_communication_interface.h  launch_communication_manager.cc  launch_communication_manager.h  load_schedule.cc  load_schedule.h  placement_schedule.cc  placement_schedule.h  scheduling_info.h
src/launcher/: canary_launcher.cc  fair_share_launcher.cc  launcher_helper.h
src/message/: command_message.h  data_message.h  data_plane_control_message.h  launch_message.h  message.cc  message.h  message_include.h
src/shared/: canary_application.cc  canary_application.h  canary_internal.cc  canary_internal.h  canary_task_context.cc  canary_task_context.h  initialize.cc  initialize.h  internal.cc  internal.h  internal_flag.cc  internal_flag.h  internal_header.h  internal_marshal.h  internal_network.cc  internal_network.h  internal_time.h  internal_type.h  network.cc  network.h  partition_map.cc  partition_map.h  resource_monitor.cc  resource_monitor.h
src/worker/: canary_launcher.cc  canary_task_context.cc  canary_task_context.h  canary_worker.cc  canary_worker.cc.bak  execute_engine.h  recipe.cc  recipe.h  recipe_block.cc  recipe_block.h  recipe_constructor.cc  recipe_constructor.h  recipe_engine.cc  recipe_engine.h  recipe_helper.cc  recipe_helper.h  stage_graph.cc  stage_graph.h  worker_communication_interface.h  worker_communication_manager.cc  worker_communication_manager.h  worker_data_router.cc  worker_data_router.h  worker_light_thread_context.cc  worker_light_thread_context.h  worker_scheduler.cc  worker_scheduler.h
test/: CMakeLists.txt  basic_client.cc  basic_command_exchange.cc  basic_data_exchange.cc  basic_load_and_print.cc  basic_marshal.cc  basic_resource_monitor.cc  basic_server.cc  intensive_marshal.cc  playground.cc
test/controller/: controller_command_manager.cc
test/worker/: basic.cc  worker_command_manager.cc
tools/: cppformat.sh  cpplint.py  generate_template.py
