add_subdirectory(kmean_loop)
add_subdirectory(lassen)
add_subdirectory(logistic_loop)
add_subdirectory(logistic_while)
add_subdirectory(parsec)
add_subdirectory(stencil)
add_subdirectory(barrier)
add_subdirectory(sumup)
add_subdirectory(shuffle)
add_subdirectory(pagerank)
IF(build_gpu)
add_subdirectory(cuda_sumup)
add_subdirectory(cuda_logistic_loop)
ENDIF()
